--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
 		"format": "prettier --write ."
 	},
 	"devDependencies": {
+		"@melt-ui/pp": "^0.1.4",
+		"@melt-ui/svelte": "^0.64.3",
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.27.4",
 		"@tailwindcss/forms": "^0.5.7",
@@ -28,6 +30,7 @@
 		"prettier-plugin-tailwindcss": "^0.4.1",
 		"svelte": "^5.0.0-next.1",
 		"svelte-check": "^3.6.0",
+		"svelte-sequential-preprocessor": "^2.0.1",
 		"tailwindcss": "^3.3.2",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
